--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,9 @@
     --fg-color: white;
     --dark-fg: gray;
     --header-color: #fffb63;
-    --shadow: 5px 1px 0 #425152;
+    --shadow: 3px 1px 0 #425152;
+    --grad-end: #f7a263;
+    --image-size: 800px;
 }
 
 body {
@@ -13,16 +15,16 @@ body {
 
 a {
     color: var(--fg-color);
+    text-decoration: none;
 }
 
-h1, h2, h3 a {
-    text-transform: uppercase;
+.astext {
     color: var(--header-color);
     text-shadow: var(--shadow);
 }
 
-a {
-    text-decoration: none;
+.uppercase {
+    text-transform: uppercase;
 }
 
 h3 a:hover {
@@ -31,4 +33,57 @@ h3 a:hover {
 
 li a:hover {
     color: var(--dark-fg);
+}
+
+#projectHeading {
+    background-color: black;
+    border: 5px solid white;
+    border-radius: 20px;
+    width: 200px;
+    position: relative;
+    left: calc(50% - 100px);
+}
+
+#projectHeading h2 {
+    text-shadow: none;
+    background-image: linear-gradient(0deg, var(--header-color), var(--grad-end));
+    background-clip: text;
+    color: transparent;
+    text-align: center;
+    margin-bottom: 0;
+    font-size: xx-large;
+}
+
+.carousel-item {
+    height: 1000px;
+}
+
+.carousel-item img {
+    position: absolute;
+    height: var(--image-size);
+    width: var(--image-size) * 1.78;
+    top: 2%;
+    left: calc(50% - (var(--image-size) / 2));
+    box-shadow: 5px solid black;
+}
+
+.carousel-caption {
+    position: absolute;
+    bottom: 1%;
+}
+
+#hero {
+    background: repeating-linear-gradient(-55deg,
+                #222,
+                #222 10px,
+                #333 10px,
+                #333 20px);
+    height: 500px;
+    margin: 20px;
+}
+
+#hero p {
+    position: relative;
+    top: 50%;
+    text-align: center;
 }
