--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,9 @@
     --grad-end: #f7a263;
     --image-size: 800px;
     --box: #101010;
+    --pink-1: #f792a5;
+    --pink-2: #f7b2b5;
+    --name-color: #e0c028;
 }
 
 body {
@@ -36,16 +39,16 @@ li a:hover {
     color: var(--dark-fg);
 }
 
-#projectHeading {
+.heading {
     background-color: black;
     border: 5px solid white;
     border-radius: 20px;
-    width: 200px;
+    width: 300px;
     position: relative;
-    left: calc(50% - 100px);
+    left: calc(50% - 150px);
 }
 
-#projectHeading h2 {
+.heading h1 {
     text-shadow: none;
     background-image: linear-gradient(0deg, var(--header-color), var(--grad-end));
     background-clip: text;
@@ -53,6 +56,7 @@ li a:hover {
     text-align: center;
     margin-bottom: 0;
     font-size: xx-large;
+    text-transform: uppercase;
 }
 
 .carousel-item {
@@ -79,12 +83,19 @@ li a:hover {
 #hero {
     height: 500px;
     margin: 20px;
+    padding: 20px;
+    text-align: left;
 }
 
-#hero p {
+#hero h2 {
     position: relative;
-    top: 50%;
-    text-align: center;
+    border-bottom: 2px solid var(--fg-color);
+}
+
+#hero img {
+    position: absolute;
+    width: 400px;
+    left: calc(50% - 162px);
 }
 
 footer {
@@ -93,4 +104,42 @@ footer {
 
 .box {
     background-color: var(--box);
+}
+
+.btn {
+    border-radius: 0;
+    border-color: var(--pink-1);
+    background: linear-gradient(180deg, var(--pink-1), var(--pink-2));
+    text-transform: uppercase;
+}
+
+i {
+    margin-right: 5px;
+}
+
+#hero a {
+    background-image: linear-gradient(0deg, var(--pink-1), var(--pink-2));
+    background-clip: text;
+    color: transparent;
+    text-transform: uppercase;
+    font-size: x-large;
+    position: relative;
+    top: 325px;
+    margin: 0 20px;
+    padding-bottom: 5px;
+}
+
+#hero a:hover {
+    border-bottom: 2px solid var(--pink-1);
+}
+
+#links {
+    text-align: center;
+}
+
+header img {
+    position: relative;
+    left: calc(50% - 25px);
+    width: 50px;
+    margin-top: 5px;
 }
