add carousel in project page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,6 +97,10 @@ i {
     width: 100px;
 }
 
+.projImg {
+    width: 300px;
+}
+
 @media screen and (max-width: 540px) {
     #heading {
         width: 250px;
