--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,14 +52,11 @@ a {
 
 .box {
     background-color: var(--box);
+    padding: 20px;
 }
 
 main {
     margin: 20px;
-}
-
-#hero {
-    padding: 20px;
 }
 
 #hero h2 {
@@ -91,6 +88,21 @@ main {
 
 i {
     margin-right: 5px;
+}
+
+.project {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.projImg {
+    display: inline;
+    margin-bottom: 20px;
+    box-shadow: #00000076 10px 10px;
+}
+
+.projBox {
+    text-align: center;
 }
 
 @media screen and (max-width: 540px) {
