--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,6 +136,19 @@ i {
     color: #fffeea;
 }
 
+.contact {
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.contact p {
+    margin-bottom: 5px;
+}
+
+.contact-icon {
+    font-size: xxx-large;
+}
+
 @media screen and (max-width: 540px) {
     #heading {
         width: 250px;
