--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,10 @@ main {
 #pfp {
     width: var(--mario-width);
     position: relative;
-    left: calc(64 * (var(--mario-width) / 670));
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 50%;
+    border-color: blue;
 }
 
 .homeLink {
